--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "sonner": "^1.2.4",
+    "stripe": "^14.16.0",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
