--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/react-query": "^10.44.1",
     "@trpc/server": "^10.44.1",
     "@types/nodemailer": "^6.4.14",
+    "body-parser": "^1.20.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cross-env": "^7.0.3",
@@ -40,7 +41,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "sonner": "^1.2.4",
-    "stripe": "^14.16.0",
+    "stripe": "^14.17.0",
     "swiper": "^11.0.6",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
