--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 
 # testing
 /coverage
+/src/media/
+/src/files/
 
 # next.js
 /.next/
@@ -24,6 +26,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# env
+.env
 
 # local env files
 .env*.local
